# robohack2026

./: .gitignore  README.md
docs/: HUMAN_FOLLOWING_AND_CONTROL.md
scripts/: start_agibot.sh  test.py
src/x2_motion_audio_tools/: setup.cfg
src/yolo_person_detector/: package.xml  setup.cfg  setup.py
src/yolo_person_detector/launch/: yolo_follower.launch.py  yolo_pipeline.launch.py
src/yolo_person_detector/test/: test_yolo_wrapper.py
src/yolo_person_detector/yolo_person_detector/: person_follower_node.py  yolo_detector_node.py
x2_motion_audio_tools/: README.md  package.xml  requirements-person.txt  requirements-voice.txt  setup.py
x2_motion_audio_tools/config/: x2_raise_arms_pose.yaml
x2_motion_audio_tools/launch/: x2_person_follow.launch.py  x2_person_follow_debug.rviz  x2_person_track_torso.launch.py  x2_raise_arms_pose.launch.py  x2_stereo_head_track.launch.py
x2_motion_audio_tools/x2_motion_audio_tools/: __init__.py  x2_arm_assist_pose.py  x2_bedrock_voice_assistant.py  x2_forward_back_raise_arms.py  x2_forward_backward_steps.py  x2_go_to_offset_raise_arms.py  x2_head_keyboard_teleop.py  x2_head_yaw_tracker.py  x2_image_conversion.py  x2_mic_logger.py  x2_person_follow.py  x2_person_track_torso.py  x2_raise_arms_pose.py  x2_sound_logger.py  x2_stereo_person_follow.py  x2_turn_to_person_tts.py  x2_waist_keyboard_teleop.py  x2_waist_yaw_tracker.py
yolo_person_detector/: README.md  requirements.txt  setup.py  view_stereo_compressed.py
yolo_person_detector/config/: yolo_params.yaml
yolo_person_detector/launch/: stereo_image_view.launch.py  stereo_person_pipeline.launch.py  yolo_follower.launch.py  yolo_pipeline.launch.py
yolo_person_detector/scripts/: deploy_to_robot.sh  run_detector_standalone.py
yolo_person_detector/yolo_person_detector/: __init__.py  camera_selector_node.py  image_conversion.py  person_follower_node.py  stereo_bbox_depth_node.py  (+8 more)
